refactor: Use getAvailableQuestionnaires from BundleService and remove redundant method
- Replaced `getAvailableQuestionnaires` in `BundleController` with the existing method from `BundleService`
- Adjusted returned list from an immutable to a mutable list for modifications
- Removed unused `getAvailableQuestionnaires` method from `BundleController` as it is no longer needed